--- a/445_14_20101211/index.html
+++ b/445_14_20101211/index.html
@@ -399,6 +399,9 @@ ul.auto-toc {
 </div>
 <div class="slide" id="id6">
 <h1>パスワード保存の常識(?)</h1>
+<p>Webシステムの記事では, パスワードの保存に</p>
+<p>「saltを付けてハッシュ」</p>
+<p>とよく言われている.</p>
 <dl class="docutils">
 <dt>保存</dt>
 <dd><ul class="first last simple">
@@ -608,6 +611,7 @@ SHA-256を繰り返し呼ぶコードを用いた計測をした</p>
 </div>
 <div class="slide" id="id13">
 <h1>なぜUnixはこの方式なのか?</h1>
+<p>先に歴史で説明する?(TODO)</p>
 <ul class="simple">
 <li>なぜ可逆な暗号化ではないのか?<ul>
 <li>鍵を管理するのが難しい.<ul>
