--- a/445_14_20101211/index.html
+++ b/445_14_20101211/index.html
@@ -487,6 +487,11 @@ ul.auto-toc {
 </li>
 </ul>
 </div>
+<div class="slide" id="md5">
+<h1>レインボーテーブルを利用したMD5のクラック</h1>
+<p>(デモ)</p>
+<p>TODO: 説明追加</p>
+</div>
 <div class="slide" id="id12">
 <h1>なぜ salt はユーザ毎に違う必要があるか</h1>
 <ul class="simple">
@@ -850,13 +855,14 @@ Intel(R) Core(TM) i7 CPU 860  &#64; 2.80GHz で 1秒に 約140万回計算でき
 </div>
 <div class="slide" id="id27">
 <h1>パスワードの話題いろいろ</h1>
+<p>TODO: 以下まだ作りかけ</p>
 <ul class="simple">
+<li>私のパスワード管理法(TODO)</li>
 <li>攻撃</li>
 <li>秘密の質問</li>
 <li>強度</li>
 <li>定期更新</li>
 <li>マスキング</li>
-<li>私のパスワード管理法(TODO)</li>
 </ul>
 </div>
 <div class="slide" id="id28">
@@ -866,24 +872,19 @@ Intel(R) Core(TM) i7 CPU 860  &#64; 2.80GHz で 1秒に 約140万回計算でき
 <li>辞書攻撃</li>
 <li>ショルダークラック</li>
 <li>キーロガー</li>
-</ul>
-<p>TODO: 以下実態と違っていたようなのでちゃんと確認</p>
-<p>弊社のポイント交換サイトで一番問題になっていたのは</p>
-<ul class="simple">
-<li>別のサイトと共通のパスワードを利用しているユーザ<ul>
-<li>他のサイトでパスワードが漏れて, ログインされる<ul>
-<li>現在は重要な機能(ポイント交換)を行なう前に 秘密の質問を入力させている</li>
-</ul>
-</li>
-</ul>
-</li>
+<li>別のサイトと共通のパスワードを利用しているユーザ
+* 他のサイトでパスワードが漏れて, ログインされる</li>
 </ul>
 </div>
 <div class="slide" id="id29">
 <h1>秘密の質問</h1>
 <ul class="simple">
+<li>弊社の例
+重要な機能(ポイント交換)を行なう前に 秘密の質問を入力させている<ul>
 <li>ユーザがサイトごとに別々のパスワードを
 付けてくれれば, 必要ないのだが...</li>
+</ul>
+</li>
 <li>よくあるのは小学校の名前とか親の旧姓とか<ul>
 <li>他者が推測可能なものがある...</li>
 </ul>
