--- a/445_14_20101211/index.html
+++ b/445_14_20101211/index.html
@@ -719,21 +719,15 @@ Intel(R) Core(TM) i7 CPU 860  &#64; 2.80GHz (1コアのみ利用)で 1秒に 約
 <li>この時 salt と stretching を利用</li>
 </ul>
 </li>
-<li><p class="first">メリット</p>
-<blockquote>
-<ul class="simple">
-<li>鍵管理が不要</li>
-<li>生パスワードを復元できない</li>
-</ul>
-</blockquote>
-</li>
-<li><p class="first">デメリット</p>
+<li><p class="first">性質</p>
 <blockquote>
 <ul class="simple">
 <li>弱いパスワードが記録された情報だけで破れる<ul>
 <li>stretching である程度対処できる</li>
 </ul>
 </li>
+<li>生パスワードを復元できない</li>
+<li>鍵管理が不要</li>
 </ul>
 </blockquote>
 </li>
@@ -770,8 +764,9 @@ Intel(R) Core(TM) i7 CPU 860  &#64; 2.80GHz (1コアのみ利用)で 1秒に 約
 <li>SQLインジェクションなどによる (表側からの)パスワード情報の漏洩</li>
 <li>バックアップファイル, 実サーバ, 廃棄サーバなどの (裏側からの)パスワード情報の漏洩</li>
 <li>開発者/運用者によるパスワード情報の漏洩/悪用<ul>
-<li>開発者はプログラムで処理する生パスワードを
-閲覧可能なことに注意</li>
+<li>パスワードを利用するシステムでは,
+サイト(開発者なども含む)を信用できなければ,
+どうにもならない</li>
 </ul>
 </li>
 </ul>
@@ -788,11 +783,8 @@ Intel(R) Core(TM) i7 CPU 860  &#64; 2.80GHz (1コアのみ利用)で 1秒に 約
 <h1>共通鍵暗号</h1>
 <p>共通鍵暗号をハッシュ的に用いる パスワード保存法もあるが, ここではパスワード情報を暗号化する場合を考察</p>
 <ul class="simple">
-<li>メリット<ul>
+<li>性質<ul>
 <li>鍵が漏れなければ, 弱いパスワードもパスワード情報だけでは破れない</li>
-</ul>
-</li>
-<li>デメリット<ul>
 <li>鍵があればパスワードを復元できる</li>
 <li>鍵の管理の必要がある</li>
 </ul>
@@ -803,12 +795,9 @@ Intel(R) Core(TM) i7 CPU 860  &#64; 2.80GHz (1コアのみ利用)で 1秒に 約
 <h1>ハッシュ+暗号</h1>
 <p>Unix的にハッシュ化したあとで暗号化</p>
 <ul class="simple">
-<li>メリット<ul>
+<li>性質<ul>
 <li>鍵が漏れなければ, 弱いパスワードもパスワード情報だけでは破れない</li>
 <li>鍵を保持するものでも生パスワードを復元できない</li>
-</ul>
-</li>
-<li>デメリット<ul>
 <li>鍵の管理の必要がある</li>
 </ul>
 </li>
@@ -848,15 +837,12 @@ Intel(R) Core(TM) i7 CPU 860  &#64; 2.80GHz (1コアのみ利用)で 1秒に 約
 <div class="slide" id="id30">
 <h1>鍵付きハッシュ(3)</h1>
 <ul class="simple">
-<li>メリット<ul>
+<li>性質<ul>
 <li>ちゃんとしたアルゴリズムを用いて鍵が安全ならば, 弱いパスワードも記録された情報だけでは破れない<ul>
 <li>「ちゃんと」しているかは「ちゃんと」した人に 確認してほしい</li>
 </ul>
 </li>
 <li>鍵を保持するものでも生パスワードを復元できない</li>
-</ul>
-</li>
-<li>デメリット<ul>
 <li>鍵の管理の必要がある</li>
 </ul>
 </li>
