--- a/Solr_5_20110516/index.html
+++ b/Solr_5_20110516/index.html
@@ -403,9 +403,6 @@ ul.auto-toc {
 </div>
 <div class="slide" id="ngram-vs">
 <h1>NGram系 vs 形態素解析</h1>
-<ul class="simple">
-<li>NGram系</li>
-</ul>
 <table border="1" class="docutils">
 <colgroup>
 <col width="41%" />
@@ -413,7 +410,7 @@ ul.auto-toc {
 <col width="44%" />
 </colgroup>
 <tbody valign="top">
-<tr><td>&nbsp;</td>
+<tr><td>NGram系</td>
 <td>CJK</td>
 <td>NGram(bi-gram)</td>
 </tr>
@@ -427,9 +424,6 @@ ul.auto-toc {
 </tr>
 </tbody>
 </table>
-<ul class="simple">
-<li>形態素解析</li>
-</ul>
 <table border="1" class="docutils">
 <colgroup>
 <col width="29%" />
@@ -437,7 +431,7 @@ ul.auto-toc {
 <col width="36%" />
 </colgroup>
 <tbody valign="top">
-<tr><td>&nbsp;</td>
+<tr><td>形態素解析</td>
 <td>Japanese(ipadic)</td>
 <td>Japanese(chasen)</td>
 </tr>
@@ -454,9 +448,6 @@ ul.auto-toc {
 </div>
 <div class="slide" id="vs-1-4-1">
 <h1>3.1.0 vs 1.4.1</h1>
-<ul class="simple">
-<li>3.1.0</li>
-</ul>
 <table border="1" class="docutils">
 <colgroup>
 <col width="41%" />
@@ -464,7 +455,7 @@ ul.auto-toc {
 <col width="44%" />
 </colgroup>
 <tbody valign="top">
-<tr><td>&nbsp;</td>
+<tr><td>3.1.0</td>
 <td>CJK</td>
 <td>NGram(bi-gram)</td>
 </tr>
@@ -478,9 +469,6 @@ ul.auto-toc {
 </tr>
 </tbody>
 </table>
-<ul class="simple">
-<li>1.4.1</li>
-</ul>
 <table border="1" class="docutils">
 <colgroup>
 <col width="41%" />
@@ -488,7 +476,7 @@ ul.auto-toc {
 <col width="44%" />
 </colgroup>
 <tbody valign="top">
-<tr><td>&nbsp;</td>
+<tr><td>1.4.1</td>
 <td>CJK</td>
 <td>NGram(bi-gram)</td>
 </tr>
