注記を追加

--- a/Solr_5_20110516/index.html
+++ b/Solr_5_20110516/index.html
@@ -404,7 +404,10 @@ ul.auto-toc {
 <div class="slide" id="ngram-vs">
 <h1>NGram系 vs 形態素解析</h1>
 <ul class="simple">
-<li>NGram系</li>
+<li>NGram系<ul>
+<li>NGramTokenizer は 1024文字しか処理しないので CJKよりもサイズが小さくなっている.</li>
+</ul>
+</li>
 </ul>
 <table border="1" class="docutils">
 <colgroup>
