--- a/Solr_5_20110516/index.html
+++ b/Solr_5_20110516/index.html
@@ -403,15 +403,11 @@ ul.auto-toc {
 </div>
 <div class="slide" id="ngram-vs">
 <h1>NGram系 vs 形態素解析</h1>
-<<<<<<< HEAD
+<blockquote>
 <ul class="simple">
-<li>NGram系<ul>
 <li>NGramTokenizer は 1024文字しか処理しないので CJKよりもサイズが小さくなっている.</li>
 </ul>
-</li>
-</ul>
-=======
->>>>>>> 5814991d6712131593849f5732292e7c49891d4a
+</blockquote>
 <table border="1" class="docutils">
 <colgroup>
 <col width="41%" />
