--- a/solr20120704/index.html
+++ b/solr20120704/index.html
@@ -132,6 +132,10 @@
 <li>QPS が 100 以下</li>
 </ul>
 <p>さらに, 2〜3個の検索システムを 物理サーバに相乗りさせている</p>
+<p>より大きいシステム(インデックスサイズ100GB超)を複数今後構築する予定.</p>
+<ul>
+<li>スケールアップかスケールアウトか検討中</li>
+</ul>
 </div>
 <div class="section slide level1" id="物理的な構成-図">
 <h1>物理的な構成 : 図</h1>
