--- a/solr20120704/index.en.html
+++ b/solr20120704/index.en.html
@@ -132,6 +132,7 @@
 <li>Query per second: under 100.</li>
 </ul>
 <p>And we share physical servers with 2 or 3 services.</p>
+<p>We are going to build bigger systems (index size: over 100GB).</p>
 </div>
 <div class="section slide level1" id="physical-composition-figure">
 <h1>Physical composition: Figure</h1>
