--- a/Clojure20121021/haruyama.html
+++ b/Clojure20121021/haruyama.html
@@ -77,7 +77,10 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <div class="section slide level1" id="vim">
 <h1>Vim</h1>
 <ul>
-<li>~/.vim/after/ftplugin/clojure.vim</li>
+<li>~/.vim/after/ftplugin/clojure.vim
+<ul>
+<li>VimShellSendStringAndMove と Rtrim(), Ref() は自作で, 含まれていません</li>
+</ul></li>
 </ul>
 <pre class="vimscript"><code>setl tabstop=2 expandtab shiftwidth=2 softtabstop=2 smarttab
 
