--- a/Clojure20121021/mixi.html
+++ b/Clojure20121021/mixi.html
@@ -45,7 +45,7 @@
 <ul>
 <li><a href="https://gihyo.jp/book/2012/978-4-7741-4993-6">日本語入力を支える技術</a> のコードを Clojure で</li>
 </ul></li>
-<li>2012/03 ミクシィ内で利用する JVM 関係のコードを書く言語を以下のように定める
+<li>2012/03 ミクシィ内で利用する Solr に関する JVM 関係のコードを書く言語を以下のように定める
 <ul>
 <li>すでに全面的に Java で開発しているものは Java</li>
 <li>新規に開発するもので Java のクラスを継承したりするものは Scala</li>
