--- a/Clojure20121021/index.html
+++ b/Clojure20121021/index.html
@@ -75,6 +75,8 @@
 <div class="section slide level1" id="資料">
 <h1>資料</h1>
 <ul>
+<li><a href="http://clojure.org/">Clojure - home</a></li>
+<li><a href="http://clojuredocs.org/">ClojureDocs - Community-Powered Clojure Documentation and Examples</a></li>
 <li><a href="http://pragprog.com/book/shcloj2/programming-clojure">Programming Clojure Second Edition</a>
 <ul>
 <li>物理的に1冊あります</li>
