--- a/solr20120704/index.en.html
+++ b/solr20120704/index.en.html
@@ -189,7 +189,7 @@
 <h1>Custom Function Query: Demo</h1>
 <p>Demo on my machine.</p>
 <ul>
-<li>http://localhost:8983/solr/select/?q=<em>%3A</em>&amp;indent=on&amp;sort=dist_between_users%281,%20id%29%20desc&amp;fl=id</li>
+<li><a href="http://localhost:8983/solr/select/?q=*%3A*&amp;version=2.2&amp;start=0&amp;rows=10&amp;indent=on&amp;fl=id&amp;sort=dist_between_users%281,id%29%20desc">Demo</a></li>
 </ul>
 </div>
 <div class="section slide level1" id="text-mining-using-solr">
