--- a/solr20120704/index.html
+++ b/solr20120704/index.html
@@ -186,7 +186,7 @@
 <h1>カスタム関数クエリ: デモ</h1>
 <p>手元の環境でのデモ</p>
 <ul>
-<li>http://localhost:8983/solr/select/?q=<em>%3A</em>&amp;indent=on&amp;sort=dist_between_users%281,%20id%29%20desc&amp;fl=id</li>
+<li><a href="http://localhost:8983/solr/select/?q=*%3A*&amp;version=2.2&amp;start=0&amp;rows=10&amp;indent=on&amp;fl=id&amp;sort=dist_between_users%281,id%29%20desc">Demo</a></li>
 </ul>
 </div>
 <div class="section slide level1" id="テキストマイニング">
@@ -235,7 +235,6 @@
 <li>ボイスに付いたコメント数</li>
 <li>年齢</li>
 <li>性別</li>
-<li>居住地</li>
 <li>…</li>
 <li>Solr の Dynamic Field を用いて一時的に要素を足すこともある
 <ul>
