--- a/Clojure20121021/index.html
+++ b/Clojure20121021/index.html
@@ -77,6 +77,7 @@
 <ul>
 <li><a href="http://clojure.org/">Clojure - home</a></li>
 <li><a href="http://clojuredocs.org/">ClojureDocs - Community-Powered Clojure Documentation and Examples</a></li>
+<li><a href="http://dev.clojure.org/dashboard.action">Dashboard - Clojure Development</a></li>
 <li><a href="http://pragprog.com/book/shcloj2/programming-clojure">Programming Clojure Second Edition</a>
 <ul>
 <li>物理的に1冊あります</li>
