--- a/sicp_20130307/mixi.html
+++ b/sicp_20130307/mixi.html
@@ -28,6 +28,7 @@
 </div>
 <div class="section slide level1" id="経過">
 <h1>経過</h1>
+<p>週1回(月曜19時すぎより)実施.</p>
 <p>TODO</p>
 <ul>
 <li>2013/02/25 5章終了</li>
