--- a/sicp_20130307/mixi.html
+++ b/sicp_20130307/mixi.html
@@ -26,9 +26,15 @@
 <p>ずっと ECナビで(退職後も) SICP読書会をやっていたので, またやりたくなった.</p>
 <p>社内で人を集めて 2011年11月開始</p>
 </div>
+<div class="section slide level1" id="形式">
+<h1>形式</h1>
+<p>週1回(月曜19時すぎより)実施.</p>
+<p>1時間強の読書会 + 2〜3時間の反省会</p>
+<p>春山がメンター. 他の参加者が発表</p>
+<p>反省会は外部からの方主体だった.</p>
+</div>
 <div class="section slide level1" id="経過">
 <h1>経過</h1>
-<p>週1回(月曜19時すぎより)実施.</p>
 <p>TODO</p>
 <ul>
 <li>2013/02/25 5章終了</li>
@@ -39,11 +45,6 @@
 <p>最初はほぼ内部の人だけで, 15人くらい.</p>
 <p>2012/04 に新卒社員を5人くらい補充.</p>
 <p>だんだん減っていったが, 外部からの人を補充していったおかげで極端に少ない人数にはならなかった. 最低でも7,8人だったはず.</p>
-</div>
-<div class="section slide level1" id="形式">
-<h1>形式</h1>
-<p>1時間強の読書会 + 2〜3時間の反省会</p>
-<p>反省会は外部からの方主体だった.</p>
 </div>
 </body>
 </html>
