--- a/sicp_20130307/mixi.html
+++ b/sicp_20130307/mixi.html
@@ -28,15 +28,24 @@
 </div>
 <div class="section slide level1" id="形式">
 <h1>形式</h1>
-<p>週1回(月曜19時すぎより)実施.</p>
-<p>1時間強の読書会 + 2〜3時間の反省会</p>
-<p>春山がメンター. 他の参加者が発表</p>
-<p>反省会は外部からの方主体だった.</p>
+<ul>
+<li>週1回(平日月曜19時すぎより)実施.
+<ul>
+<li>年末年始と会社の行事が重なった際は平日でも休み.</li>
+</ul></li>
+<li>1時間強の読書会 + 2〜3時間の反省会.</li>
+<li>春山がメンター. 他の参加者が発表</li>
+<li>反省会は外部からの方主体だった. 基本的にミクシィ内で開催.</li>
+</ul>
 </div>
 <div class="section slide level1" id="経過">
 <h1>経過</h1>
-<p>TODO</p>
 <ul>
+<li>2011/11/14 開始</li>
+<li>2012/02/13 1章終了</li>
+<li>2012/06/11 2章終了</li>
+<li>2012/09/24 3章終了</li>
+<li>2012/12/17 4章終了</li>
 <li>2013/02/25 5章終了</li>
 </ul>
 </div>
@@ -44,7 +53,22 @@
 <h1>参加者数</h1>
 <p>最初はほぼ内部の人だけで, 15人くらい.</p>
 <p>2012/04 に新卒社員を5人くらい補充.</p>
-<p>だんだん減っていったが, 外部からの人を補充していったおかげで極端に少ない人数にはならなかった. 最低でも7,8人だったはず.</p>
+<p>だんだん減っていくが, 内部からも外部からも適当に補充していったおかげで極端に少ない人数にはならなかった. 最低でも7,8人だった.</p>
+<ul>
+<li>のべ参加者数
+<ul>
+<li>内部: 20人強</li>
+<li>外部: 10人強</li>
+</ul></li>
+</ul>
+</div>
+<div class="section slide level1" id="今後">
+<h1>今後</h1>
+<p>別の発表で.</p>
+</div>
+<div class="section slide level1" id="宣伝">
+<h1>宣伝</h1>
+<p><a href="http://www.zusaar.com/event/534005">渋谷.clj 2013/03/17(日) on Zusaar</a> - http://www.zusaar.com/event/534005</p>
 </div>
 </body>
 </html>
