--- a/sicp_20130307/index.html
+++ b/sicp_20130307/index.html
@@ -23,6 +23,7 @@
 <div class="section slide level1" id="式次第">
 <h1>式次第</h1>
 <h2 id="lt的なもの">LT的なもの</h2>
+<p>長くても 20:15 まで.</p>
 <ul>
 <li><p>@haruyama: <a href="mixi.html">弊社でのSICP読書会</a></p></li>
 <li>他社での読書会事例紹介
@@ -32,9 +33,11 @@
 </ul></li>
 <li>@halcat0x15a さん: きっとなんかしゃべってくれる</li>
 <li><p>@rejasupotaro: なんかしゃべるっていってた.</p></li>
-<li><p>@haruyama: 4月か5月からの新しい読書会</p></li>
+<li><p>@haruyama: <a href="mixi_next.html">弊社での次の読書会</a></p></li>
+<li><p>他に希望者がいれば調整します.</p></li>
 </ul>
 <h2 id="懇親会">懇親会</h2>
+<p>LT的なもの終わり次第開始</p>
 <p>払える人は最大1500円お願いします.</p>
 </div>
 <div class="section slide level1" id="会場説明">
