--- a/sicp_20130307/mixi_next.html
+++ b/sicp_20130307/mixi_next.html
@@ -38,7 +38,7 @@
 <ul>
 <li>計算機プログラムの構造と解釈(SICP)</li>
 <li>コンピュータプログラミングの概念・技法・モデル(CTMCP)</li>
-<li>関数プログラミング入門</li>
+<li>関数プログラミング入門(IFPH)</li>
 <li>How to Design Programs(HtDP)</li>
 <li>プログラミングの基礎(浅井先生)</li>
 <li>プログラミング言語の基礎概念(五十嵐先生)</li>
@@ -58,7 +58,7 @@
 <p>Mozart の実装が 32bit 環境前提なのが残念なところ(64bit環境でも動かせるが)</p>
 </div>
 <div class="section slide level1" id="関数プログラミング入門">
-<h1>関数プログラミング入門</h1>
+<h1>関数プログラミング入門(IFPH)</h1>
 <p><a href="http://www.cs.ox.ac.uk/publications/books/functional/">Oxford University Computing Laboratory: Research</a></p>
 <p>言語: Haskell</p>
 <p>SICPよりちょっと難しい. 一番最初にやる本ではない感じ?</p>
