--- a/sicp_20130307/mixi_next.html
+++ b/sicp_20130307/mixi_next.html
@@ -57,9 +57,9 @@
 <p>プログラミングパラダイムの種類をたくさん紹介しているという点では一番か?</p>
 <p>Mozart の実装が 32bit 環境前提なのが残念なところ(64bit環境でも動かせるが)</p>
 </div>
-<div class="section slide level1" id="関数プログラミング入門">
+<div class="section slide level1" id="関数プログラミング入門ifph">
 <h1>関数プログラミング入門(IFPH)</h1>
-<p><a href="http://www.cs.ox.ac.uk/publications/books/functional/">Oxford University Computing Laboratory: Research</a></p>
+<p><a href="http://www.cs.ox.ac.uk/publications/books/functional/">Introduction to Functional Programming using Haskell</a></p>
 <p>言語: Haskell</p>
 <p>SICPよりちょっと難しい. 一番最初にやる本ではない感じ?</p>
 </div>
