--- a/sicp_20130307/mixi_next.html
+++ b/sicp_20130307/mixi_next.html
@@ -83,6 +83,19 @@
 <p><a href="http://d.hatena.ne.jp/nowokay/20111221#1324440641">「プログラミング言語の基礎概念」という本が非常にお気に入り - きしだのはてな</a></p>
 <p>SICPというよりはTaPLの前の読むといい本じゃないかと思います.</p>
 </div>
+<div class="section slide level1" id="その他の候補">
+<h1>その他の候補</h1>
+<ul>
+<li>Purely Functional Data Structures(PFDS)</li>
+<li>関数型言語の入門書
+<ul>
+<li>すごいH</li>
+<li>すごいE</li>
+<li>Land of Lisp</li>
+<li>…</li>
+</ul></li>
+</ul>
+</div>
 <div class="section slide level1" id="どれを読む">
 <h1>どれを読む?</h1>
 <p>次回の読書会参加者と相談して決めます. 基本は弊社の参加者の意見を優先します.</p>
