HtDPについての @esumii さんのTweetへのリンクを追加

--- a/sicp_20130307/mixi_next.html
+++ b/sicp_20130307/mixi_next.html
@@ -68,6 +68,7 @@
 <p>言語: Scheme(Racket)</p>
 <p><a href="http://www.htdp.org/">How to Design Programs</a></p>
 <p>SICPよりも簡単そう. ちょっと簡単すぎるかも?</p>
+<p><a href="https://twitter.com/esumii/status/308748267146067968">Twitter / esumii: できるだけ数学的でない（ないし、できるだけ簡単な数学しか使わ …</a></p>
 </div>
 <div class="section slide level1" id="プログラミングの基礎浅井先生">
 <h1>プログラミングの基礎(浅井先生)</h1>
