update talks' titles.

--- a/sicp_20130307/index.html
+++ b/sicp_20130307/index.html
@@ -28,11 +28,11 @@
 <li><p>@haruyama: <a href="mixi.html">弊社でのSICP読書会</a></p></li>
 <li>他社での読書会事例紹介
 <ul>
-<li>@ajiyoshi さん: VOYAGE GROUP での SICP読書会</li>
-<li>@hito_asa さん ないし @ryshinoz さん: GMOメディア での SICP読書会</li>
+<li>@ajiyoshi さん: VOYAGE GROUP様 での SICP読書会</li>
+<li>@hito_asa さん: <a href="http://hito-asa.github.com/slide/20130307_sicp_daihanseikai">GMOメディア様でのSICP読書会 @SICP大反省会</a></li>
 </ul></li>
 <li>@halcat0x15a さん: きっとなんかしゃべってくれる</li>
-<li><p>@rejasupotaro: なんかしゃべるっていってた.</p></li>
+<li><p>@rejasupotaro: この前飲み会で話したS式の話</p></li>
 <li><p>@haruyama: <a href="mixi_next.html">弊社での次の読書会</a></p></li>
 <li><p>他に希望者がいれば調整します.</p></li>
 </ul>
