--- a/sicp_20130307/index.html
+++ b/sicp_20130307/index.html
@@ -22,7 +22,15 @@
 </div>
 <div class="section slide level1" id="式次第">
 <h1>式次第</h1>
-<h2 id="lt的なもの">LT的なもの</h2>
+<ul>
+<li>この説明</li>
+<li>LT</li>
+<li>懇親会</li>
+</ul>
+<p>ハッシュタグは <a href="https://twitter.com/search/realtime?q=%23sicphansei">#sicphansei</a></p>
+</div>
+<div class="section slide level1" id="lt">
+<h1>LT</h1>
 <p>長くても 20:15 まで.</p>
 <ul>
 <li><p>@haruyama: <a href="mixi.html">弊社でのSICP読書会</a></p></li>
@@ -36,7 +44,9 @@
 <li><p>@haruyama: <a href="mixi_next.html">弊社での次の読書会</a></p></li>
 <li><p>他に希望者がいれば調整します.</p></li>
 </ul>
-<h2 id="懇親会">懇親会</h2>
+</div>
+<div class="section slide level1" id="懇親会">
+<h1>懇親会</h1>
 <p>LT的なもの終わり次第開始</p>
 <p>払える人は最大1500円お願いします.</p>
 </div>
