--- a/sicp_20130513/index.html
+++ b/sicp_20130513/index.html
@@ -26,11 +26,10 @@
 <ul>
 <li>毎週月曜 19時過ぎより開催
 <ul>
-<li>遅刻早退は問題なし</li>
 <li>ミクシィの都合/年末年始などで開催しない場合があります</li>
 </ul></li>
-<li>前回の最後に発表者と範囲を決める</li>
-<li>発表者が発表し他の参加者は質問する
+<li>前回の最後に発表者と範囲を決定</li>
+<li>発表者が発表し他の参加者は質問
 <ul>
 <li>時間はだいたい 1時間から1時間半</li>
 </ul></li>
@@ -40,9 +39,27 @@
 </ul></li>
 </ul>
 </div>
+<div class="section slide level1" id="欠席遅刻早退">
+<h1>欠席/遅刻/早退</h1>
+<ul>
+<li>欠席/遅刻/早退は問題なし
+<ul>
+<li>ただし よほど人数が少なくならなければ, 開催は中止しません.</li>
+</ul></li>
+<li>長いこと出席できないのであれば, <a href="https://twitter.com/haruyama">@haruyama</a> に連絡してください.</li>
+</ul>
+</div>
+<div class="section slide level1" id="新規参加">
+<h1>新規参加</h1>
+<p>現在多くの参加者がいるので, 外部の方の新規参加は当面なしとします.</p>
+<ul>
+<li>今日いらっしゃってる外部の方は OK</li>
+<li>内部の新規参加は大人数でなければなんとかしたいと思います.</li>
+</ul>
+</div>
 <div class="section slide level1" id="場所">
 <h1>場所</h1>
-<p>基本 0715 会議室で行ないますが, 都合で変更する場合があいます.</p>
+<p>0715 会議室で行ないますが, 都合で変更する場合があります.</p>
 <ul>
 <li>外部の人の出入り
 <ul>
@@ -81,7 +98,10 @@
 <h1>懇親会</h1>
 <p>読書会後コラボで懇親します</p>
 <ul>
-<li>今日5/13はそこそこのものを用意しました. 次回以降はもっと質素です</li>
+<li>今日5/13はそこそこのものを用意しました. 次回以降はもっと質素です
+<ul>
+<li>若手でない人は2000円以上払ってください.</li>
+</ul></li>
 <li>コラボの都合で開催しないかもしれません</li>
 <li>差し入れは歓迎します</li>
 </ul>
@@ -89,6 +109,13 @@
 <div class="section slide level1" id="sicp-と発表のやり方紹介">
 <h1>SICP と発表のやり方紹介</h1>
 <p>(デモ)</p>
+</div>
+<div class="section slide level1" id="第1回発表者決定">
+<h1>第1回発表者決定</h1>
+<ul>
+<li>5/20 は 1.1.7 例: Newton法による平方根(問題1.8まで) を範囲とします.</li>
+<li>5/27 は 1.2.2 木構造再帰(問題1.13まで)を範囲とする予定です.</li>
+</ul>
 </div>
 <div class="section slide level1" id="質問タイム">
 <h1>質問タイム</h1>
