--- a/Clojure20130630/haruyama3.html
+++ b/Clojure20130630/haruyama3.html
@@ -86,7 +86,7 @@ HARUYAMA Seigo(<a href="https://twitter.com/haruyama">@haruyama</a>)
 <h1>Vim plugins</h1>
 <ul>
 <li><a href="https://github.com/thinca/vim-ft-clojure">thinca/vim-ft-clojure</a></li>
-<li><p><a href="https://github.com/tpope/vim-fireplace">tpope/vim-fireplace · GitHub</a></p></li>
+<li><p><a href="https://github.com/tpope/vim-fireplace">tpope/vim-fireplace</a></p></li>
 <li><p><a href="https://github.com/vim-scripts/paredit.vim">vim-scripts/paredit.vim</a></p></li>
 <li><p><a href="https://github.com/liquidz/lein-vim">liquidz/lein-vim</a></p></li>
 </ul>
@@ -97,7 +97,7 @@ HARUYAMA Seigo(<a href="https://twitter.com/haruyama">@haruyama</a>)
 <li><a href="https://gist.github.com/haruyama/5820163">$HOME/.vim/after/ftplugin/clojure.vim</a></li>
 <li><a href="https://gist.github.com/haruyama/5791152">$HOME/.vim/syntax_checkers/clojure/nrepl.vim</a>
 <ul>
-<li>a syntax checker for <a href="https://github.com/scrooloose/syntastic">scrooloose/syntastic</a></li>
+<li>a syntax checker using <a href="https://github.com/scrooloose/syntastic">scrooloose/syntastic</a></li>
 </ul></li>
 </ul>
 </div>
