--- a/scala_20130803/index.html
+++ b/scala_20130803/index.html
@@ -30,7 +30,7 @@
 <li>セキュリティ</li>
 </ul></li>
 <li><p>毎週月曜に SICP読書会をやっています</p></li>
-<li><p><a href="http://wiki.livedoor.jp/haruyama_seigo/d/%bf%a6%cc%b3%b7%d0%ce%f2">職務経歴 - 春山征吾のWiki - Seesaa Wiki（ウィキ）</a></p></li>
+<li><p><a href="http://wiki.livedoor.jp/haruyama_seigo/">春山征吾のWiki - Seesaa Wiki（ウィキ）</a></p></li>
 </ul>
 </div>
 <div class="section slide level1" id="scala-と私">
