--- a/solr_20131009/index.html
+++ b/solr_20131009/index.html
@@ -63,7 +63,7 @@ HARUYAMA Seigo(<a href="https://twitter.com/haruyama">@haruyama</a>)
 </div>
 <div class="section slide level1" id="lucene-gosen">
 <h1>lucene-gosen</h1>
-<p>lucene-gosen tokenizes HALFWIDTH characters into one unk, even if characters includes a punctuation.</p>
+<p>lucene-gosen tokenizes HALFWIDTH characters into one unk, even if characters include punctuations.</p>
 <p>SOLUTION: MappingCharFilterFactory or kuromoji</p>
 <ul>
 <li><a href="https://github.com/haruyama/Anuenue/blob/9bc4e8853cb2e2bbbcfdd740efeefedb9d98cdf8/src/solr/collection1/conf/mapping-halfwidth-symbol.txt">mapping-halfwidth-symbol.txt</a></li>
