--- a/Clojure20140316/index.html
+++ b/Clojure20140316/index.html
@@ -34,9 +34,8 @@ HARUYAMA Seigo(<a href="https://twitter.com/haruyama">@haruyama</a>)
 <div id="lein" class="slide section level1">
 <h1>lein</h1>
 <ul>
-<li>~/.lein/profiles.clj</li>
+<li><a href="https://github.com/haruyama/Settings/blob/91d9372293c491bf3a94b0997c94b171e82e1287/.lein/profiles.clj">~/.lein/profiles.clj</a></li>
 </ul>
-<p><a href="https://github.com/haruyama/Settings/blob/91d9372293c491bf3a94b0997c94b171e82e1287/.lein/profiles.clj">$HOME/.lein/profiles.clj</a></p>
 </div>
 <div id="jvm-opts" class="slide section level1">
 <h1>jvm-opts</h1>
