--- a/Clojure20140316/index.html
+++ b/Clojure20140316/index.html
@@ -68,8 +68,8 @@ HARUYAMA Seigo(<a href="https://twitter.com/haruyama">@haruyama</a>)
 <div id="vim-setting" class="slide section level1">
 <h1>Vim setting</h1>
 <ul>
-<li><a href="https://github.com/haruyama/Settings/blob/91d9372293c491bf3a94b0997c94b171e82e1287/.vim/after/ftplugin/clojure.vim">$HOME/.vim/after/ftplugin/clojure.vim</a></li>
-<li><a href="https://github.com/haruyama/Settings/blob/91d9372293c491bf3a94b0997c94b171e82e1287/.vim/syntax_checkers/clojure/nrepl.vim">$HOME/.vim/syntax_checkers/clojure/nrepl.vim</a>
+<li><a href="https://github.com/haruyama/Settings/blob/91d9372293c491bf3a94b0997c94b171e82e1287/.vim/after/ftplugin/clojure.vim">~/.vim/after/ftplugin/clojure.vim</a></li>
+<li><a href="https://github.com/haruyama/Settings/blob/91d9372293c491bf3a94b0997c94b171e82e1287/.vim/syntax_checkers/clojure/nrepl.vim">~/.vim/syntax_checkers/clojure/nrepl.vim</a>
 <ul>
 <li>a syntax checker and test runnner using <a href="https://github.com/scrooloose/syntastic">scrooloose/syntastic</a></li>
 </ul></li>
@@ -91,9 +91,9 @@ HARUYAMA Seigo(<a href="https://twitter.com/haruyama">@haruyama</a>)
 <div id="references" class="slide section level1">
 <h1>References</h1>
 <ul>
-<li><a href="http://haruyama.github.com/Clojure20121021/haruyama.html">@haruyama の Clojure 開発環境</a></li>
-<li><a href="http://haruyama.github.com/Clojure20130317/haruyama2.html">@haruyama の Clojure 開発環境 その2</a></li>
-<li><a href="http://haruyama.github.com/Clojure20130630/haruyama3.html">@haruyama の Clojure 開発環境 その3</a></li>
+<li><a href="http://haruyama.github.io/Clojure20121021/haruyama.html">@haruyama の Clojure 開発環境</a></li>
+<li><a href="http://haruyama.github.io/Clojure20130317/haruyama2.html">@haruyama の Clojure 開発環境 その2</a></li>
+<li><a href="http://haruyama.github.io/Clojure20130630/haruyama3.html">@haruyama の Clojure 開発環境 その3</a></li>
 </ul>
 </div>
 </body>
