--- a/Clojure20140316/index.html
+++ b/Clojure20140316/index.html
@@ -75,13 +75,10 @@ HARUYAMA Seigo(<a href="https://twitter.com/haruyama">@haruyama</a>)
 </ul></li>
 </ul>
 </div>
-<div id="requirements-for-syntax-check" class="slide section level1">
-<h1>Requirements for syntax check</h1>
+<div id="requirements-for-syntax-checking" class="slide section level1">
+<h1>Requirements for syntax checking</h1>
 <ul>
-<li>add org.clojure/tools.namespace to profiles.dev.dependencies.
-<ul>
-<li><a href="https://github.com/haruyama/mixi-cj-lib/blob/master/project.clj">mixi-cj-lib/project.clj at master</a></li>
-</ul></li>
+<li>add org.clojure/tools.namespace to profiles.dev.dependencies.</li>
 <li>execute ‘lein repl’ in a project directory.</li>
 </ul>
 </div>
