--- a/reveal.js/template-revealjs.html
+++ b/reveal.js/template-revealjs.html
@@ -84,14 +84,13 @@ $body$
   // Full list of configuration options available here:
   // https://github.com/hakimel/reveal.js#configuration
   Reveal.initialize({
-    controls: false,
+    controls: true,
     slideNumber: true,
     progress: true,
     history: true,
     center: false,
     keyboard:true,
     mouseWheel: true,
-    transitionSpeed: 'fast',
 
   // available themes are in /css/theme
   $if(theme)$
